src/Inf/KubeGen/todo/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-api-svc
  labels:
    component: account-api-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: api-port
  selector:
    component: api-pod
