src/Inf/KubeGen/todo/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    component: db-svc
spec:
  ports:
    - port: 5432
  selector:
    component: db-pod
