src/Inf/KubeGen/todo/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    component: web-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: web-port
  selector:
    component: web-pod
